--- a/index.html
+++ b/index.html
@@ -11,58 +11,66 @@
 </head>
 <body>
     <div class="row">
-        <div class="col">1 col</div>
-        <div class="col">1 col</div>
-        <div class="col">1 col</div>
-        <div class="col">1 col</div>
-        <div class="col">1 col</div>
-        <div class="col">1 col</div>
-        <div class="col">1 col</div>
-        <div class="col">1 col</div>
-        <div class="col">1 col</div>
-        <div class="col">1 col</div>
-        <div class="col">1 col</div>
-        <div class="col">1 col</div>
-    </div>
-
-    <div class="row">
-        <div class="col">12</div>
-    </div>
-
-    <div class="row">
-        <div class="col-xs-8">8</div>
-        <div class="col-xs-2">2</div>
-        <div class="col-xs-2">2</div>
+        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">1 col</div>
+        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">1 col</div>
+        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">1 col</div>
+        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">1 col</div>
+        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">1 col</div>
+        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">1 col</div>
+        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">1 col</div>
+        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">1 col</div>
+        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">1 col</div>
+        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">1 col</div>
+        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">1 col</div>
+        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">1 col</div>
 
     </div>
 
     <div class="row">
-        <div class="col-xs-1">1</div>
-        <div class="col-xs-2">2</div>
-        <div class="col-xs-2">2</div>
-        <div class="col-xs-6">6</div>
-        <div class="col-xs-1">1</div>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 ">12</div>
+    </div>
 
+    <div class="row">
+        <div  class="col-xs-8 col-sm-8 col-md-8 col-lg-8">8</div>
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">2</div>
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">2</div>
 
 
 
     </div>
 
     <div class="row">
-        <div class="col-xs-6">
+        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">1 col</div>
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">2</div>
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">2</div>
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">6</div>
+        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">1 col</div>
+        
+
+
+
+
+    </div>
+
+    <div class="row">
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 block">
           <div class="nested"> 
             <div class="row">
-                <div id="pink" class="col-xs-2 pink">2</div>
-                <div id="pink" class="col-xs-2 pink ">2</div>
-                <div id="pink" class="col-xs-8 pink">8</div>
+                <div class="pink col-xs-2 col-sm-2 col-md-2 col-lg-2">2</div>
+                <div class=" pink col-xs-2 col-sm-2 col-md-2 col-lg-2">2</div>
+                <div  class="pink col-xs-8 col-sm-8 col-md-8 col-lg-8">8</div>
             </div>
         </div> 
 
         </div>
-        <div class="col-xs-6">
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 block">
+
+          <div class="nested"> 
             <div class="row">
-             <div id="pink" class=" col-xs-6 pink">6</div>
-             <div id="pink" class="col-xs-6 pink">6</div>
+             <div class="pink col-xs-6 col-sm-6 col-md-6 col-lg-6 ">6</div>
+             <div class="pink col-xs-6 col-sm-6 col-md-6 col-lg-6 ">6</div>
+          </div> 
+
 
             </div>
         </div>
